esse form tá muito feio, mudar amanhã

--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,40 @@
+ /* form  */
+ /* botoes */
+
+ .button {
+    color: #090909;
+    padding: 0.7em 1.7em;
+    font-size: 18px;
+    border-radius: 0.5em;
+    background: #e8e8e8;
+    cursor: pointer;
+    border: 1px solid #e8e8e8;
+    transition: all 0.3s;
+    box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+  }
+
+  button:active {
+
+    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+  }
 
 
 
+
+ 
 /* botao edit */
 
   .edit-button {
     width: 40px;
     height: 40px;
 
-    background-color: rgb(20, 20, 20);
+    background-color: rgb(255, 255, 255);
     border: none;
     font-weight: 600;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+    box-shadow: 0px 0px 20px rgba(255, 255, 255, 0.164);
     cursor: pointer;
     transition-duration: 0.3s;
     overflow: hidden;
