--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,7 @@
     box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
   }
 
-  button:active {
+  .button:active {
 
     box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
   }
@@ -21,7 +21,7 @@
 
 
 
- 
+
 /* botao edit */
 
   .edit-button {
